# aparmenttool

./: .gitignore  Dockerfile  README.md  SETUP.md  dashboard.js  docker-compose.prod.yml  pyproject.toml  pytest.ini  requirements.txt  test_facebook_fix.py
config/: .env.example
deployment/: docker-compose.yml
docs/: Epic4_Complete_Summary.md  Epic4_Implementation_Guide.md  Epic5_Complete_Summary.md  FACEBOOK_SETUP_FIX.md  Frontend_Refactoring_Summary.md  PROJECT_STRUCTURE.md  Todo.md
frontend/: dashboard.js
scripts/: ai_status.py  demo_ai_agents.py  demo_frontend.py  demo_live_scanning.py  deploy.sh  epic4_demo_simple.py  epic5_demo_final.py  hello_world.py  init_database.py  live_scan.py  project_completion_summary.py  quick_start.sh  run_worker.py  setup_env.py  test_complete_flow.py  test_content_analysis.py  test_environment.py  test_epic4_telegram_web.py  test_epic5_production.py  test_frontend.py  test_notifications.py  test_notifications_sim.py  test_profile_integration.py  test_yad2_scraper.py
scripts/demo/: demo_epic4.py  demo_epic5.py
scripts/reports/: epic4_completion_summary.py  epic5_summary.py
scripts/setup/: interactive_setup.sh  quick_start.sh
src/: db.py
src/ai_agents/: __init__.py  agent_manager.py  models.py
src/analysis/: __init__.py  content.py
src/notifications/: __init__.py  base.py  channels.py  dispatcher.py
src/scrapers/: __init__.py  base.py  captcha_solver.py  config.py  facebook.py  firecrawl_yad2.py  yad2.py  yad2_bypass.py  yad2_config.py
src/web/: api.py  (+6 more)
tests/: __init__.py  conftest.py  test_ai_integration.py
(+88 files in other folders)
