[tool.poetry]
name = "realty-scanner"
version = "0.1.0"
description = "Autonomous real estate listing aggregator using Agno framework"
authors = ["YaronFeldboy <your-email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
agno = "^0.9.0"
playwright = "^1.48.0"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.4"
twilio = "^9.3.7"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.41.1"
python-telegram-bot = "^21.9"
sendgrid = "^6.11.0"
mailgun = "^0.1.1"
pre-commit = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.13.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
